[project]
name = "certitude"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pytest>=8.3.3",
    "dash-bootstrap-components>=1.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/certitude"]
